--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "next": "13.1.6",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-quill": "^2.0.0"
   },
